# scl

./: .gitignore  CMakeLists.txt  README.md  package.json
demo/: CMakeLists.txt
demo/memory/: CMakeLists.txt  CONTEXT.md  main.cpp
demo/memory/imgui/: Log.hpp  MemoryGui.cpp  MemoryGui.hpp  Tag.hpp
src/: CMakeLists.txt
src/c/include/cLib/: Log.h  cTypes.h
src/c/include/cLib/collection/: cArray.h  cLinkedList.h  cRange.h  cSpan.h
src/c/include/cLib/ecs/: cComponentInfo.h
src/c/include/cLib/memory/: Memory.h  cBuffer.h  cMemoryContext.h
src/c/include/cLib/memory/allocator/: Allocator.h  DefaultAllocator.h  NullAllocator.h  StackAllocator.h  ZoneAllocator.h
src/c/include/cLib/memory/strategy/: DataStrategy.h  MemStrategy.h  NullStrategy.h  StackStrategy.h  ZoneStrategy.h
src/c/include/cLib/memory/zone/: Handle.h  MemBlock.h  Zone.h  ZoneStats.h
src/c/include/cLib/string/: cFormat.h  cName.h  cNameTable.h  cString.h  cStringBuilder.h  cStringView.h
src/c/src/: Log.c
src/c/src/collection/: cArray.c
src/c/src/memory/: Memory.c  cMemoryContext.c
src/c/src/memory/allocator/: DefaultAllocator.c  NullAllocator.c  StackAllocator.c  ZoneAllocator.c
src/c/src/memory/strategy/: DataStrategy.c  MemStrategy.c  NullStrategy.c  StackStrategy.c  ZoneStrategy.c
src/c/src/memory/zone/: MemBlock.c  Zone.c  ZoneStats.c
src/c/src/string/: cName.c  cNameTable.c  cString.c  cStringBuilder.c  cStringView.c
src/cpp/include/cLib/: Types.hpp
src/cpp/include/cLib/collection/: Array.hpp  Range.hpp  Span.hpp
src/cpp/include/cLib/memory/: Scoped.hpp
src/cpp/include/cLib/string/: String.hpp
src/cpp/include/details/collection/: Array.inl
src/cpp/src/string/: String.cpp
tests/: CMakeLists.txt
tests/c/: CMakeLists.txt
tests/c/collection/: Collection_test.cpp  cArray_test.cpp
tests/c/memory/: Log_test.cpp  TestHelpers.h  cMemoryContext_test.cpp
tests/c/memory/allocator/: DefaultAllocator_test.cpp  NullAllocator_test.cpp  StackAllocator_test.cpp  ZoneAllocator_test.cpp
tests/c/memory/strategy/: MemStrategy_test.cpp
tests/c/memory/zone/: MemBlock_test.cpp  ZoneStats_test.cpp  Zone_test.cpp
tests/c/string/: cNameTable_test.cpp  cName_test.cpp  cStringBuilder_test.cpp  cStringView_test.cpp  cString_test.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/collection/: Array_test.cpp
tests/cpp/string/: String_test.cpp
